trunk/Archive2/6a/99ebf9620d893e/output
main.cpp:9:15: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
    char *a = "hello";
              ^
main.cpp:10:15: error: array 'new' cannot have initialization arguments
    char *b = new char[strlen(a) + 1](0);
              ^                       ~
1 warning and 1 error generated.
